refactor(products): 重构产品系列结构并新增舵机控制支持
- 架构调整: 重新组织产品线目录，明确audio与edge系列边界

- 功能扩展: 新增舵机控制模块，提供PWM精度控制接口

- 硬件抽象: 为舵机设备创建独立驱动层，支持角度与速度控制

--- a/main/boards/fogseek-edge-es8311-lcd1.8/config.json
+++ b/main/boards/fogseek-edge-es8311-lcd1.8/config.json
@@ -2,7 +2,7 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "fogseek-audio",
+            "name": "fogseek-edge-es8311-lcd1.8",
             "sdkconfig_append": [
                 "CONFIG_SR_WN_WN9_HAIXIAOWU_TTS=y"
             ]
