--- a/main/boards/edge-xiaoya/config.json
+++ b/main/boards/edge-xiaoya/config.json
@@ -2,12 +2,13 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "fogseek-edge",
+            "name": "edge-xiaoya",
             "sdkconfig_append": [
                 "CONFIG_ESPTOOLPY_FLASHSIZE_8MB=y",
                 "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions/v2/8m.csv\"",
                 "CONFIG_USE_DEVICE_AEC=y",
-                "CONFIG_SR_WN_WN9_HAIXIAOWU_TTS=y"
+                "CONFIG_SR_WN_WN9_XIAOYAXIAOYA_TTS2=y",
+                "CONFIG_OTA_URL=\"https://api.aiyainfo.com:8002/xiaoya/ota/\""
             ]
         }
     ]
