--- a/main/boards/fogseek-edge-kit/config.json
+++ b/main/boards/fogseek-edge-kit/config.json
@@ -2,8 +2,9 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "fogseek-audio",
+            "name": "fogseek-edge-kit",
             "sdkconfig_append": [
+                "CONFIG_USE_DEVICE_AEC=y",
                 "CONFIG_SR_WN_WN9_HAIXIAOWU_TTS=y"
             ]
         }
