--- a/main/boards/waveshare-c6-touch-amoled-1.8/config.json
+++ b/main/boards/waveshare-c6-touch-amoled-1.8/config.json
@@ -1,8 +1,8 @@
 {
-    "target": "esp32s3",
+    "target": "esp32c6",
     "builds": [
         {
-            "name": "esp32-s3-touch-amoled-1.8",
+            "name": "waveshare-c6-touch-amoled-1.8",
             "sdkconfig_append": [
                 "CONFIG_USE_ESP_WAKE_WORD=y"
             ]
