--- a/main/boards/esp32s3-korvo2-v3-rndis/config.json
+++ b/main/boards/esp32s3-korvo2-v3-rndis/config.json
@@ -2,7 +2,7 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "esp32s3-korvo2-v3_rndis",
+            "name": "esp32s3-korvo2-v3-rndis",
             "sdkconfig_append": [
                 "CONFIG_CAMERA_OV2640=y",
                 "CONFIG_CAMERA_OV3660=y",
