refactor(products): 按核心音频方案重构产品系列结构
- 明确系列定义: Audio系列采用MAX98357方案，定位基础播放

- 明确系列定义: Trial系列采用ES8311方案，定位入门开发

- 明确系列定义: Nano系列采用ES8389方案，定位高集成度应用

- 明确系列定义: Edge系列采用ES8311+ES7210方案，定位高性能音频交互

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -583,7 +583,6 @@ elseif(CONFIG_BOARD_TYPE_HU_087)
     set(BOARD_TYPE "hu-087")
     set(BUILTIN_TEXT_FONT font_puhui_basic_14_1)
     set(BUILTIN_ICON_FONT font_awesome_14_1)
-    
 elseif(CONFIG_BOARD_TYPE_FOGSEEK_AUDIO)
     set(BOARD_TYPE "fogseek-audio")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
@@ -604,8 +603,8 @@ elseif(CONFIG_BOARD_TYPE_FOGSEEK_EDGE_KIT)
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_FOGSEEK_EDGE_es8311_LCD1_8)
-    set(BOARD_TYPE "fogseek-edge-es8311-lcd1.8")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_TRIAL_LCD1_8)
+    set(BOARD_TYPE "fogseek-trial-lcd1.8")
     set(BUILTIN_TEXT_FONT font_puhui_20_4)
     set(BUILTIN_ICON_FONT font_awesome_20_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_64)
@@ -666,6 +665,11 @@ elseif(CONFIG_BOARD_TYPE_EDGE_SPIN_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
 elseif(CONFIG_BOARD_TYPE_EDGE_ZHUMIAN)
     set(BOARD_TYPE "edge-zhumian")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
+    set(BUILTIN_ICON_FONT font_awesome_16_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_32)
+elseif(CONFIG_BOARD_TYPE_NANO_GLOWBIES)
+    set(BOARD_TYPE "nano-glowbies")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
