--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -292,6 +292,10 @@ elseif(CONFIG_BOARD_TYPE_WAVESHARE_S3_ePaper_1_54)
     set(BOARD_TYPE "waveshare-s3-epaper-1.54")
     set(BUILTIN_TEXT_FONT font_puhui_basic_20_4)
     set(BUILTIN_ICON_FONT font_awesome_20_4)
+elseif(CONFIG_BOARD_TYPE_WAVESHARE_S3_RLCD_4_2)
+    set(BOARD_TYPE "waveshare-s3-rlcd-4.2")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_30_4)
+    set(BUILTIN_ICON_FONT font_awesome_30_4)
 elseif(CONFIG_BOARD_TYPE_WAVESHARE_S3_TOUCH_LCD_3_49)
     set(BOARD_TYPE "waveshare-s3-touch-lcd-3.49")
     set(LVGL_TEXT_FONT font_puhui_basic_30_4)
