--- a/main/boards/bread-compact-nt26/config.json
+++ b/main/boards/bread-compact-nt26/config.json
@@ -2,7 +2,7 @@
     "target": "esp32s3",
     "builds": [
         {
-            "name": "bread-compact-nt26k",
+            "name": "bread-compact-nt26",
             "sdkconfig_append": [
                 "CONFIG_OLED_SSD1306_128X32=y"
             ]
