--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -22,10 +22,7 @@ dependencies:
   espressif/esp_audio_effects: ~1.2.0
   espressif/esp_audio_codec: ~2.4.0
   78/esp-ml307: ~3.5.3
-  78/uart-eth-modem:
-    version: ~0.1.3
-    rules:
-    - if: target in [esp32s3]
+  78/uart-eth-modem: ~0.1.3
   78/xiaozhi-fonts: ~1.5.5
   espressif/led_strip: ~3.0.1
   espressif/esp_codec_dev: ~1.5
