Update CMakeLists.txt to change component dependency from REQUIRES to PRIV_REQUIRES for esp_pm, esp_psram, and esp_driver_gpio

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -738,7 +738,7 @@ idf_component_register(SRCS ${SOURCES}
                     EMBED_FILES ${LANG_SOUNDS} ${COMMON_SOUNDS}
                     INCLUDE_DIRS ${INCLUDE_DIRS}
                     WHOLE_ARCHIVE
-                    REQUIRES
+                    PRIV_REQUIRES
                         esp_pm
                         esp_psram
                         esp_driver_gpio
