Add esp_driver_ppa as a dependency in CMakeLists.txt

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -766,6 +766,7 @@ idf_component_register(SRCS ${SOURCES}
                         esp_driver_i2c
                         esp_driver_i2s
                         esp_driver_jpeg
+                        esp_driver_ppa
                         esp_app_format
                         app_update
                         spi_flash
