--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -588,18 +588,18 @@ elseif(CONFIG_BOARD_TYPE_FOGSEEK_AUDIO)
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_FOGSEEK_EDGE)
-    set(BOARD_TYPE "fogseek-edge")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_NANO)
+    set(BOARD_TYPE "fogseek-nano")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_FOGSEEK_EDGE_LCD1_8)
-    set(BOARD_TYPE "fogseek-edge-lcd1.8")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_NANO_LCD1_8)
+    set(BOARD_TYPE "fogseek-nano-lcd1.8")
     set(BUILTIN_TEXT_FONT font_puhui_20_4)
     set(BUILTIN_ICON_FONT font_awesome_20_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_64)
-elseif(CONFIG_BOARD_TYPE_FOGSEEK_EDGE_KIT)
-    set(BOARD_TYPE "fogseek-edge-kit")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_NANO_KIT)
+    set(BOARD_TYPE "fogseek-nano-kit")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
@@ -618,28 +618,28 @@ elseif(CONFIG_BOARD_TYPE_AUDIO_LINKBIT)
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_EDGE_LINKBIT)
-    set(BOARD_TYPE "edge-linkbit")
+elseif(CONFIG_BOARD_TYPE_NANO_LINKBIT)
+    set(BOARD_TYPE "nano-linkbit")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_EDGE_LINKBIT_LUMI)
-    set(BOARD_TYPE "edge-linkbit-lumi")
+elseif(CONFIG_BOARD_TYPE_NANO_LINKBIT_LUMI)
+    set(BOARD_TYPE "nano-linkbit-lumi")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_EDGE_LINKBIT_LUMI_4G)
-    set(BOARD_TYPE "edge-linkbit-lumi-4g")
+elseif(CONFIG_BOARD_TYPE_NANO_LINKBIT_LUMI_4G)
+    set(BOARD_TYPE "nano-linkbit-lumi-4g")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_EDGE_LINKBIT_VISON)
-    set(BOARD_TYPE "edge-linkbit-vison")
+elseif(CONFIG_BOARD_TYPE_NANO_LINKBIT_VISION)
+    set(BOARD_TYPE "nano-linkbit-vision")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_EDGE_LINKBIT_VISON_4G)
-    set(BOARD_TYPE "edge-linkbit-vison-4g")
+elseif(CONFIG_BOARD_TYPE_NANO_LINKBIT_VISION_4G)
+    set(BOARD_TYPE "nano-linkbit-vision-4g")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
@@ -648,23 +648,23 @@ elseif(CONFIG_BOARD_TYPE_AUDIO_XIAOYA)
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_EDGE_XIAOYA)
-    set(BOARD_TYPE "edge-xiaoya")
+elseif(CONFIG_BOARD_TYPE_NANO_XIAOYA)
+    set(BOARD_TYPE "nano-xiaoya")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_EDGE_SPIN)
-    set(BOARD_TYPE "edge-spin")
+elseif(CONFIG_BOARD_TYPE_NANO_SPIN)
+    set(BOARD_TYPE "nano-spin")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_EDGE_SPIN_4)
-    set(BOARD_TYPE "edge-spin-4g")
+elseif(CONFIG_BOARD_TYPE_NANO_SPIN_4)
+    set(BOARD_TYPE "nano-spin-4g")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_EDGE_ZHUMIAN)
-    set(BOARD_TYPE "edge-zhumian")
+elseif(CONFIG_BOARD_TYPE_NANO_ZHUMIAN)
+    set(BOARD_TYPE "nano-zhumian")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
