Add ESP32-S3 camera component selection and support
Introduces a new esp32s3_camera implementation for ESP32-S3 boards using the esp_camera component, with conditional compilation and Kconfig options to select between esp_camera and esp_video. Updates board initialization code and config files to use the new camera class where appropriate, and adjusts build system and dependencies to support both camera components on ESP32-S3 and ESP32-P4 targets.

--- a/main/boards/esp32s3-korvo2-v3/config.json
+++ b/main/boards/esp32s3-korvo2-v3/config.json
@@ -4,6 +4,7 @@
         {
             "name": "esp32s3-korvo2-v3",
             "sdkconfig_append": [
+                "CONFIG_XIAOZHI_USE_ESP_CAMERA=y",
                 "CONFIG_CAMERA_OV2640=y",
                 "CONFIG_CAMERA_OV3660=y",
                 "CONFIG_CAMERA_OV3660_AUTO_DETECT_DVP_INTERFACE_SENSOR=y",
