feat(products): 新增香氛灯产品并扩展小雅开发板自定义声音功能

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -663,8 +663,13 @@ elseif(CONFIG_BOARD_TYPE_NANO_SPIN_4)
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_NANO_ZHUMIAN)
-    set(BOARD_TYPE "nano-zhumian")
+elseif(CONFIG_BOARD_TYPE_AUDIO_ZHUMIAN_MISTLIGHT)
+    set(BOARD_TYPE "audio-zhumian-mistlight")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
+    set(BUILTIN_ICON_FONT font_awesome_16_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_32)
+elseif(CONFIG_BOARD_TYPE_NANO_ZHUMIAN_MISTLIGHT)
+    set(BOARD_TYPE "nano-zhumian-mistlight")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
@@ -701,6 +706,8 @@ endif ()
 # Select language directory according to Kconfig
 if(CONFIG_LANGUAGE_ZH_CN)
     set(LANG_DIR "zh-CN")
+elseif(CONFIG_LANGUAGE_ZH_CN_XY)
+    set(LANG_DIR "zh-CN-XY")
 elseif(CONFIG_LANGUAGE_ZH_TW)
     set(LANG_DIR "zh-TW")
 elseif(CONFIG_LANGUAGE_EN_US)
