--- a/main/boards/audio-xiaoya/config.json
+++ b/main/boards/audio-xiaoya/config.json
@@ -4,6 +4,7 @@
         {
             "name": "audio-xiaoya",
             "sdkconfig_append": [
+                "CONFIG_LANGUAGE_ZH_CN_XY=y",
                 "CONFIG_SR_WN_WN9_XIAOYAXIAOYA_TTS2=y",
                 "CONFIG_OTA_URL=\"https://api.aiyainfo.com:8002/xiaoya/ota/\""
             ]
