refactor(products): 实施四大产品系列标准化命名规则

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -588,8 +588,18 @@ elseif(CONFIG_BOARD_TYPE_FOGSEEK_AUDIO)
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_TRIAL_LCD1_8)
+    set(BOARD_TYPE "fogseek-trial-lcd1.8")
+    set(BUILTIN_TEXT_FONT font_puhui_20_4)
+    set(BUILTIN_ICON_FONT font_awesome_20_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_64)
 elseif(CONFIG_BOARD_TYPE_FOGSEEK_NANO)
     set(BOARD_TYPE "fogseek-nano")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
+    set(BUILTIN_ICON_FONT font_awesome_16_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_32)
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_NANO_KIT)
+    set(BOARD_TYPE "fogseek-nano-kit")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
@@ -598,83 +608,73 @@ elseif(CONFIG_BOARD_TYPE_FOGSEEK_NANO_LCD1_8)
     set(BUILTIN_TEXT_FONT font_puhui_20_4)
     set(BUILTIN_ICON_FONT font_awesome_20_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_64)
-elseif(CONFIG_BOARD_TYPE_FOGSEEK_NANO_KIT)
-    set(BOARD_TYPE "fogseek-nano-kit")
-    set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
-    set(BUILTIN_ICON_FONT font_awesome_16_4)
-    set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_FOGSEEK_TRIAL_LCD1_8)
-    set(BOARD_TYPE "fogseek-trial-lcd1.8")
-    set(BUILTIN_TEXT_FONT font_puhui_20_4)
-    set(BUILTIN_ICON_FONT font_awesome_20_4)
-    set(DEFAULT_EMOJI_COLLECTION twemoji_64)
 elseif(CONFIG_BOARD_TYPE_FOGSEEK_AUDIO_MOODLIGHT)
     set(BOARD_TYPE "fogseek-audio-moodlight")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_AUDIO_LINKBIT)
-    set(BOARD_TYPE "audio-linkbit")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_AUDIO_LINKBIT)
+    set(BOARD_TYPE "fogseek-audio-linkbit")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_NANO_LINKBIT)
-    set(BOARD_TYPE "nano-linkbit")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_NANO_LINKBIT)
+    set(BOARD_TYPE "fogseek-nano-linkbit")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_NANO_LINKBIT_LUMI)
-    set(BOARD_TYPE "nano-linkbit-lumi")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_NANO_LINKBIT_LUMI)
+    set(BOARD_TYPE "fogseek-nano-linkbit-lumi")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_NANO_LINKBIT_LUMI_4G)
-    set(BOARD_TYPE "nano-linkbit-lumi-4g")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_NANO_LINKBIT_LUMI_4G)
+    set(BOARD_TYPE "fogseek-nano-linkbit-lumi-4g")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_NANO_LINKBIT_VISION)
-    set(BOARD_TYPE "nano-linkbit-vision")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_NANO_LINKBIT_VISION)
+    set(BOARD_TYPE "fogseek-nano-linkbit-vision")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_NANO_LINKBIT_VISION_4G)
-    set(BOARD_TYPE "nano-linkbit-vision-4g")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_NANO_LINKBIT_VISION_4G)
+    set(BOARD_TYPE "fogseek-nano-linkbit-vision-4g")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_AUDIO_XIAOYA)
-    set(BOARD_TYPE "audio-xiaoya")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_AUDIO_AIYA)
+    set(BOARD_TYPE "fogseek-audio-aiya")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_NANO_XIAOYA)
-    set(BOARD_TYPE "nano-xiaoya")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_NANO_AIYA)
+    set(BOARD_TYPE "fogseek-nano-aiya")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_NANO_SPIN)
-    set(BOARD_TYPE "nano-spin")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_NANO_SPIN)
+    set(BOARD_TYPE "fogseek-nano-spin")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_NANO_SPIN_4)
-    set(BOARD_TYPE "nano-spin-4g")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_NANO_SPIN_4)
+    set(BOARD_TYPE "fogseek-nano-spin-4g")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_AUDIO_ZHUMIAN_MISTLIGHT)
-    set(BOARD_TYPE "audio-zhumian-mistlight")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_AUDIO_MISTLIGHT)
+    set(BOARD_TYPE "fogseek-audio-mistlight")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_NANO_ZHUMIAN_MISTLIGHT)
-    set(BOARD_TYPE "nano-zhumian-mistlight")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_NANO_MISTLIGHT)
+    set(BOARD_TYPE "fogseek-nano-mistlight")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
-elseif(CONFIG_BOARD_TYPE_NANO_GLOWBIES)
-    set(BOARD_TYPE "nano-glowbies")
+elseif(CONFIG_BOARD_TYPE_FOGSEEK_NANO_GLOWBIES)
+    set(BOARD_TYPE "fogseek-nano-glowbies")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
