--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -16,6 +16,7 @@ dependencies:
     - if: target in [esp32, esp32s2, esp32s3, esp32p4]
   espressif/esp_lcd_spd2010: ==1.0.2
   espressif/esp_io_expander_tca9554: ==2.0.0
+  waveshare/custom_io_expander_ch32v003: ^1.0.0
   espressif/esp_lcd_panel_io_additions: ^1.0.1
   78/esp_lcd_nv3023: ~1.0.0
   78/esp-wifi-connect: ~3.0.2
