feat: New support for the Waveshare ESP32-P4-WIFI6-Touch-LCD-X third-party board has been added, along with the complete HMI CNC enclosure.
fix: Fix the compilation issues.

fix: build conf error

fix: Resolve component conflicts

fix: jd9365 components build error

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -363,6 +363,11 @@ elseif(CONFIG_BOARD_TYPE_WAVESHARE_P4_WIFI6_TOUCH_LCD_7B)
     set(BUILTIN_TEXT_FONT font_puhui_basic_30_4)
     set(BUILTIN_ICON_FONT font_awesome_30_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_64)
+elseif(CONFIG_BOARD_TYPE_WAVESHARE_P4_WIFI6_TOUCH_LCD_X)
+    set(BOARD_TYPE "waveshare-p4-wifi6-touch-lcd-x")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_30_4)
+    set(BUILTIN_ICON_FONT font_awesome_30_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_64)
 elseif(CONFIG_BOARD_TYPE_WAVESHARE_P4_WIFI6_TOUCH_LCD_XC)
     set(BOARD_TYPE "waveshare-p4-wifi6-touch-lcd-xc")
     set(BUILTIN_TEXT_FONT font_puhui_basic_30_4)
