Add support for RNDIS board and enhance camera initialization
- Included rndis_board.cc in the build for ESP32S3 and ESP32P4 targets.
- Updated camera initialization logic in esp32s3_korvo2_v3_board.cc and esp32s3_korvo2_v3_board.cc to use a more structured camera_config_t setup.
- Improved code readability by refining comments and formatting in the camera initialization functions.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -777,7 +777,9 @@ endif()
 
 # Include EspVideo if target is ESP32S3 or ESP32P4
 if(CONFIG_IDF_TARGET_ESP32S3 OR CONFIG_IDF_TARGET_ESP32P4)
-    list(APPEND SOURCES "boards/common/esp_video.cc")
+    list(APPEND SOURCES "boards/common/esp_video.cc"
+                        "boards/common/rndis_board.cc"
+                        )
 endif()
 
 # Include Esp32Camera if target is ESP32S3
@@ -792,6 +794,7 @@ idf_component_register(SRCS ${SOURCES}
                     PRIV_REQUIRES
                         esp_pm
                         esp_psram
+                        esp_netif
                         esp_driver_gpio
                         esp_driver_uart
                         esp_driver_spi
