--- a/main/boards/waveshare-s3-touch-lcd-4.3c/config.json
+++ b/main/boards/waveshare-s3-touch-lcd-4.3c/config.json
@@ -7,7 +7,7 @@
                 "CONFIG_BOARD_TYPE_ESP32S3_Touch_LCD_4_3C=y",
                 "CONFIG_USE_DEVICE_AEC=y",
                 "CONFIG_SPIRAM_FETCH_INSTRUCTIONS=y",
-                "CONFIG_SPIRAM_RODATA=y",
+                "CONFIG_SPIRAM_RODATA=y"
             ]
         }
     ]
