--- a/main/boards/m5stack-cardputer-adv/config.json
+++ b/main/boards/m5stack-cardputer-adv/config.json
@@ -7,10 +7,8 @@
                 "CONFIG_ESPTOOLPY_FLASHSIZE_8MB=y",
                 "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions/v2/8m.csv\"",
                 "CONFIG_USE_AFE_WAKE_WORD=y",
-                "CONFIG_SR_WN_WN9_NIHAOXIAOZHI_TTS=n",
-                "CONFIG_SR_WN_WN9_HIMFIVE=y"
+                "CONFIG_SPIRAM=n"
             ]
         }
     ]
 }
-
