add AtomS3R + EchoPyramid.

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -195,6 +195,11 @@ elseif(CONFIG_BOARD_TYPE_M5STACK_CORE_TAB5)
     set(BUILTIN_TEXT_FONT font_puhui_basic_30_4)
     set(BUILTIN_ICON_FONT font_awesome_30_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_64)
+elseif(CONFIG_BOARD_TYPE_M5STACK_ATOM_S3R_ECHO_PYRAMID)
+    set(BOARD_TYPE "atoms3r-echo-pyramid")
+    set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
+    set(BUILTIN_ICON_FONT font_awesome_16_4)
+    set(DEFAULT_EMOJI_COLLECTION twemoji_32)
 elseif(CONFIG_BOARD_TYPE_M5STACK_ATOM_S3_ECHO_BASE)
     set(BOARD_TYPE "atoms3-echo-base")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
