--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -159,12 +159,15 @@ elseif(CONFIG_BOARD_TYPE_LICHUANG_DEV_C3)
     set(BUILTIN_ICON_FONT font_awesome_20_4)
     set(DEFAULT_EMOJI_COLLECTION twemoji_32)
 elseif(CONFIG_BOARD_TYPE_EDA_TV_PRO)
+    set(MANUFACTURER "lceda-course-examples")
     set(BOARD_TYPE "eda-tv-pro")    
 elseif(CONFIG_BOARD_TYPE_EDA_ROBOT_PRO)
+    set(MANUFACTURER "lceda-course-examples")
     set(BOARD_TYPE "eda-robot-pro")
     set(BUILTIN_TEXT_FONT font_puhui_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
 elseif(CONFIG_BOARD_TYPE_EDA_SUPER_BEAR)
+    set(MANUFACTURER "lceda-course-examples")
     set(BOARD_TYPE "eda-super-bear")
 elseif(CONFIG_BOARD_TYPE_MAGICLICK_S3_2P4)
     set(BOARD_TYPE "magiclick-2p4")
