--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,7 +83,7 @@ jobs:
           fi
 
   build:
-    name: Build ${{ matrix.name }}
+    name: Build ${{ matrix.full_name }}
     needs: prepare
     if: ${{ needs.prepare.outputs.variants != '[]' }}
     strategy:
@@ -106,6 +106,6 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: xiaozhi_${{ matrix.name }}_${{ github.sha }}.bin
+          name: xiaozhi_${{ matrix.full_name }}_${{ github.sha }}
           path: build/merged-binary.bin
           if-no-files-found: error
