CONFIG_SR_WN_WN9_NIHAOXIAOZHI_TTS=n to save space

--- a/main/boards/waveshare/esp32-s3-epaper-1.54/config.json
+++ b/main/boards/waveshare/esp32-s3-epaper-1.54/config.json
@@ -14,7 +14,8 @@
             "sdkconfig_append": [
                 "CONFIG_SPIRAM_MODE_QUAD=y",
                 "CONFIG_ESPTOOLPY_FLASHSIZE_4MB=y",
-                "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions/v2/4m.csv\""
+                "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions/v2/4m.csv\"",
+                "CONFIG_SR_WN_WN9_NIHAOXIAOZHI_TTS=n"
             ]
         }
     ]
