Add multiline chat message support in display configuration
- Introduced a new Kconfig option to enable multiline chat message display in the default mode.
- Updated the LCD display setup to accommodate a dynamic height bottom bar for multiline messages.
- Modified the configuration files for the waveshare-esp32-s3-epaper-1.54 board to include the new chat message setting.

--- a/main/boards/waveshare/esp32-s3-epaper-1.54/config.json
+++ b/main/boards/waveshare/esp32-s3-epaper-1.54/config.json
@@ -6,7 +6,8 @@
             "name": "esp32-s3-epaper-1.54-v2",
             "sdkconfig_append": [
                 "CONFIG_ESPTOOLPY_FLASHSIZE_8MB=y",
-                "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions/v2/8m.csv\""
+                "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions/v2/8m.csv\"",
+                "CONFIG_USE_MULTILINE_CHAT_MESSAGE=y"
             ]
         },
         {
@@ -14,7 +15,8 @@
             "sdkconfig_append": [
                 "CONFIG_SPIRAM_MODE_QUAD=y",
                 "CONFIG_ESPTOOLPY_FLASHSIZE_4MB=y",
-                "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions/v2/4m.csv\""
+                "CONFIG_PARTITION_TABLE_CUSTOM_FILENAME=\"partitions/v2/4m.csv\"",
+                "CONFIG_USE_MULTILINE_CHAT_MESSAGE=y"
             ]
         }
     ]
