--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -171,14 +171,14 @@ elseif(CONFIG_BOARD_TYPE_EDA_SUPER_BEAR)
     set(BOARD_TYPE "eda-super-bear")
 elseif(CONFIG_BOARD_TYPE_MAGICLICK_S3_2P4)
     set(BOARD_TYPE "magiclick-2p4")
-    set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
+    set(BUILTIN_TEXT_FONT font_noto_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
-    set(DEFAULT_EMOJI_COLLECTION twemoji_32)
+    set(DEFAULT_EMOJI_COLLECTION noto-emoji_64)
 elseif(CONFIG_BOARD_TYPE_MAGICLICK_S3_2P5)
     set(BOARD_TYPE "magiclick-2p5")
-    set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
+    set(BUILTIN_TEXT_FONT font_noto_basic_16_4)
     set(BUILTIN_ICON_FONT font_awesome_16_4)
-    set(DEFAULT_EMOJI_COLLECTION twemoji_32)
+    set(DEFAULT_EMOJI_COLLECTION noto-emoji_64)
 elseif(CONFIG_BOARD_TYPE_MAGICLICK_C3)
     set(BOARD_TYPE "magiclick-c3")
     set(BUILTIN_TEXT_FONT font_puhui_basic_16_4)
