--- a/main/boards/bread-compact-wifi/config.json
+++ b/main/boards/bread-compact-wifi/config.json
@@ -4,13 +4,15 @@
         {
             "name": "bread-compact-wifi",
             "sdkconfig_append": [
-                "CONFIG_OLED_SSD1306_128X32=y"
+                "CONFIG_OLED_SSD1306_128X64=y",
+                "CONFIG_LANGUAGE_DE_DE=y"
             ]
         },
         {
             "name": "bread-compact-wifi-128x64",
             "sdkconfig_append": [
-                "CONFIG_OLED_SSD1306_128X64=y"
+                "CONFIG_OLED_SSD1306_128X64=y",
+                "CONFIG_LANGUAGE_DE_DE=y"
             ]
         }
     ]
